Analyse sonarlint #36